<resources>
    <string name="app_name">Sirius</string>
    <string name="title">DoTA 2</string>
    <string name="genre1">MOBA</string>
    <string name="genre2">MULTIPLAYER</string>
    <string name="genre3">STRATEGY</string>
    <string name="rate">4.9</string>
    <string name="total_reviews">70M Reviews</string>
    <string name="total_reviews_short">70M</string>
    <string name="install_btn_text">Install</string>
    <string name="name1">Auguste Conte</string>
    <string name="name2">Jang Marcelino</string>
    <string name="date">February 14, 2019</string>
    <string name="review">Review &amp; Ratings</string>
    <string name="comment">“Once you start to learn its secrets, there’s a wild and exciting variety of play here that’s unmatched, even by its peers.”</string>
    <string name="game_description">Dota 2 is a multiplayer online battle arena (MOBA) game which has two teams of five players compete to collectively destroy a large structure defended by the opposing team known as the "Ancient", whilst defending their own.</string>
</resources>