<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#050B18"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLeft"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glRight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />


    <ImageView
        android:id="@+id/ivHeadImg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/head_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/nav_btn_background"
        android:src="@drawable/icon_arrow_vector"
        app:layout_constraintStart_toEndOf="@+id/glLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/nav_btn_background"
        android:src="@drawable/icon_more_vector"
        app:layout_constraintEnd_toStartOf="@+id/glRight"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="-40dp"
        android:background="@drawable/dota_logo_background"
        android:padding="15dp"
        android:src="@drawable/dota_logo"
        app:layout_constraintStart_toEndOf="@+id/glLeft"
        app:layout_constraintTop_toBottomOf="@+id/ivHeadImg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDota"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toBottomOf="@+id/ivHeadImg"
        android:text="@string/title"
        android:textColor="#FFFFFF"
        android:layout_marginStart="14dp"
        android:fontFamily="@font/sk_modernist_bold"
        android:textSize="20sp" />
    <ImageView
        android:id="@+id/ivStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/stars_vector"
        app:layout_constraintTop_toBottomOf="@+id/tvDota"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        android:layout_marginStart="14dp"
        android:layout_marginTop="7dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/ivStars"
        app:layout_constraintTop_toBottomOf="@+id/tvDota"
        android:text="@string/total_reviews_short"
        android:fontFamily="@font/sk_modernist_regular"
        android:textColor="#45454D"
        android:textSize="12sp"
        android:layout_marginTop="7dp"
        android:layout_marginStart="10dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/glLeft"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:layout_marginTop="23dp"
        android:id="@+id/llGenres">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre1"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="#44A9F4"
            android:textSize="10sp"
            android:background="@drawable/text_view_genre_background"
            android:layout_marginEnd="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre2"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="#44A9F4"
            android:textSize="10sp"
            android:background="@drawable/text_view_genre_background"
            android:layout_marginEnd="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre3"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="#44A9F4"
            android:textSize="10sp"
            android:background="@drawable/text_view_genre_background"
            android:layout_marginEnd="10dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvGameInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sk_modernist_regular"
        android:textSize="12sp"
        android:textColor="#B2EEF2FB"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@+id/llGenres"
        app:layout_constraintEnd_toStartOf="@+id/glRight"
        app:layout_constraintStart_toEndOf="@id/glLeft"
        android:text="@string/game_description"
        android:layout_marginTop="24dp" />
    <TextView
        android:id="@+id/tvReviewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvGameInfo"
        app:layout_constraintStart_toEndOf="@+id/glLeft"
        android:textSize="16sp"
        android:textColor="#EEF2FB"
        android:fontFamily="@font/sk_modernist_bold"
        android:layout_marginTop="16dp"
        android:text="@string/review" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvReviewTitle"
        app:layout_constraintStart_toEndOf="@+id/glLeft"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/sk_modernist_bold"
        android:textSize="48sp"
        android:textColor="#FFFFFF"
        android:text="@string/rate" />

    <ImageView
        android:id="@+id/ivRatingStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvRating"
        app:layout_constraintTop_toBottomOf="@+id/tvReviewTitle"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/stars_vector"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sk_modernist_regular"
        android:textSize="12sp"
        android:textColor="#A8ADB7"
        app:layout_constraintStart_toEndOf="@+id/tvRating"
        app:layout_constraintTop_toBottomOf="@+id/ivRatingStars"
        android:layout_marginTop="8dp"
        android:layout_marginStart="15dp"
        android:text="@string/total_reviews" />
    <ImageView
        android:id="@+id/ivDecoLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvRating"
        app:layout_constraintStart_toEndOf="@+id/glLeft"
        app:layout_constraintEnd_toStartOf="@+id/glRight"
        android:layout_marginTop="8dp"
        android:src="@drawable/deco_line_vector" />

    <LinearLayout
        android:id="@+id/llProfilePicNameData1"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivDecoLine"
        app:layout_constraintStart_toEndOf="@+id/glLeft"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivCommentProfilePic1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_pic_1"
            android:background="@drawable/comment_avatar_background"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivCommentProfilePic1"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            android:id="@+id/llNameDate1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sk_modernist_regular"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:text="@string/name1"
                android:layout_marginBottom="7dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sk_modernist_regular"
                android:textSize="12sp"
                android:textColor="#66FFFFFF"
                android:text="@string/date" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvComment1"
        app:layout_constraintTop_toBottomOf="@+id/llProfilePicNameData1"
        app:layout_constraintStart_toEndOf="@+id/glLeft"
        app:layout_constraintEnd_toStartOf="@+id/glRight"
        android:layout_marginTop="15dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sk_modernist_regular"
        android:textSize="12sp"
        android:textColor="#A8ADB7"
        android:text="@string/comment" />

    <LinearLayout
        android:id="@+id/llProfilePicNameData2"
        android:layout_width="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvComment1"
        app:layout_constraintStart_toEndOf="@+id/glLeft"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivCommentProfilePic2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_pic_2"
            android:background="@drawable/comment_avatar_background"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivCommentProfilePic2"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            android:id="@+id/llNameDate2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sk_modernist_regular"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:text="@string/name2"
                android:layout_marginBottom="7dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sk_modernist_regular"
                android:textSize="12sp"
                android:textColor="#66FFFFFF"
                android:text="@string/date" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvComment2"
        app:layout_constraintTop_toBottomOf="@+id/llProfilePicNameData2"
        app:layout_constraintStart_toEndOf="@+id/glLeft"
        app:layout_constraintEnd_toStartOf="@+id/glRight"
        android:layout_marginTop="15dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sk_modernist_regular"
        android:textSize="12sp"
        android:textColor="#A8ADB7"
        android:text="@string/comment" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tvComment2"
        app:layout_constraintStart_toEndOf="@+id/glLeft"
        app:layout_constraintEnd_toStartOf="@+id/glRight"
        android:fontFamily="@font/sk_modernist_bold"
        android:textColor="#050B18"
        android:textSize="20sp"
        style="@style/MaterialAlertDialog.Material3.Title.Text.CenterStacked"
        android:background="@drawable/install_btn_background"
        android:text="@string/install_btn_text"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>